# scanner-rename

./: .gitignore  .gitleaks.toml  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.local.example.md  CLAUDE.md  Makefile  README.md  apm.lock.yaml  apm.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: notify-sound.sh  post-edit-format.sh  post-write-html-host-path.sh  skill-context-injector.sh
.claude/rules/: markdown-style.md  python.md  rules-authoring.md  security.md
.claude/scripts/: statusline.sh
.devcontainer/: .bash_aliases  .tmux.conf  Dockerfile  README.md  dev-setup.md  devcontainer.json  herdr-config.toml  post-create-command.sh
.kiro/steering/: product.md  roadmap.md  structure.md  tech.md
app_llm_prompts/: README.md  extraction_policy.draft.md  naming_policy.draft.md
broker/: README.md
docs/: dev-setup.md  glossary.md  initial-context.md  product-backlog.md  security-notes.md
docs/adr-candidates/: 0001-google-cloud-and-cloud-run-job.md  0002-polling-first.md  0003-no-state-store-v1.md  0004-devcontainer-and-gcp-test-broker.md  0005-runtime-llm-prompts-as-md.md  0006-posttooluse-and-precommit-dual-formatting.md  0007-terminal-multiplexer-byobu.md  0008-git-branch-naming-workaround.md  0009-notification-sound-on-llm-completion.md  0010-lsp-evaluation-for-claude-code.md
docs/pbi-notes/: ph0-016_housekeeping-workflow.md  ph0-019_vscode-host-path-resolver.md  ph0-020_security-model-docs.md  ph0-021_ph0-012-review-fixes.md  ph1-002_spec-review.md
tests/: README.md  test_version.py
(+77 files in other folders)
