[project]
name = "scanner-rename"
version = "0.1.0"
requires-python = ">= 3.13"
dependencies = []

[dependency-groups]
dev = [
    "apm-cli",
    "pre-commit>=4.0",
    "pyright>=1.1.410",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scanner_rename"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not cloud and not e2e_cloud'"
markers = [
    "unit: pure unit tests (no external services)",
    "integration_fake: integration tests with fake adapters",
    "cloud: tests calling GCP via test broker",
    "e2e_cloud: end-to-end tests against real GCP services",
]

[tool.coverage.run]
source = ["scanner_rename"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
